--- a/src/pages/MovieItemCard/MovieItemCard.module.css
+++ b/src/pages/MovieItemCard/MovieItemCard.module.css
@@ -5,19 +5,19 @@
   background-color: #ffff;
   transform: scale(1);
   transition: transform 250ms linear;
-  border-radius: 15px 15px 0 0;
+  border-radius: 8px 8px 0 0;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
 }
 
 .MovieGalleryItem:hover,
 .MovieGalleryItem:focus {
-  transform: scale(1.01);
+  transform: scale(1.02);
   cursor: pointer;
 }
 
 .MovieGalleryItemImage {
-  border-radius: 15px 15px 0 0;
+  border-radius: 8px 8px 0 0;
   max-width: 300px;
   width: 100%;
   height: 260px;
@@ -29,7 +29,7 @@ h1 {
   text-align: center;
   font-size: 28px;
   margin-bottom: 10px;
-  color: #010101;
+  color: #294652;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -39,18 +39,20 @@ h1 {
   text-decoration: none;
 }
 
-h2 {
-  font-size: 26px;
+.MovieName {
+  font-size: 18px;
+  font-weight: 500;
   margin-top: 10px;
   margin-bottom: 10px;
-  color: #010101;
+  color: #294652;
 }
 
-h3 {
+.MovieDate {
   font-size: 16px;
+  font-weight: 400;
   margin-top: 10px;
   margin-bottom: 10px;
-  color: #010101;
+  color: #294652;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
