--- a/src/pages/MovieItemCard/MovieItemCard.module.css
+++ b/src/pages/MovieItemCard/MovieItemCard.module.css
@@ -1,11 +1,11 @@
 .MovieGalleryItem {
   width: 100%;
   display: block;
-  padding: 5px;
+  padding: 8px;
   background-color: #ffff;
   transform: scale(1);
   transition: transform 250ms linear;
-  border-radius: 8px 8px 0 0;
+  border-radius: 8px 8px;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
 }
@@ -17,7 +17,7 @@
 }
 
 .MovieGalleryItemImage {
-  border-radius: 8px 8px 0 0;
+  border-radius: 8px 8px;
   max-width: 300px;
   width: 100%;
   height: 260px;
@@ -27,8 +27,8 @@
 
 h1 {
   text-align: center;
-  font-size: 28px;
-  margin-bottom: 10px;
+  font-size: 24px;
+  margin-bottom: 8px;
   color: #294652;
   white-space: nowrap;
   overflow: hidden;
