--- a/src/pages/MovieReviews/MovieReviews.module.css
+++ b/src/pages/MovieReviews/MovieReviews.module.css
@@ -18,6 +18,15 @@
 }
 
 .ReviewList {
-  text-decoration: none;
+  display: grid;
+  grid: 16px;
   list-style: none;
+  padding: 0 16px;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  grid-gap: 16px;
+  margin: 16px;
+  padding: 0;
+  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
 }
