--- a/src/pages/MoviesPage/MoviesPage.module.css
+++ b/src/pages/MoviesPage/MoviesPage.module.css
@@ -3,6 +3,8 @@
   max-width: 100%;
   margin-left: auto;
   margin-right: auto;
+  margin: 0 16px 0;
+  padding: 0;
   grid-gap: 24px;
   grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
 }
